--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
     - bin/*
     - config/**/*
     - db/*
+    - vendor/bundle/**/*
     - test/test_helper.rb
     - spec/spec_helper.rb
     - spec/rails_helper.rb
