--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
     - bin/*
     - config/**/*
     - db/*
+    - db/migrate/*
     - vendor/bundle/**/*
     - test/test_helper.rb
     - spec/spec_helper.rb
@@ -19,3 +20,9 @@ AllCops:
     - cli_server.rb
 Rails:
   Enabled: true
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
