Validating the Login on Users

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,3 +26,7 @@ Style/FrozenStringLiteralComment:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/LineLength:
+  Exclude:
+    - spec/models/**/*
