Code style and cleaning

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,13 +5,12 @@ AllCops:
     - db/*
     - db/migrate/*
     - vendor/bundle/**/*
-    - test/test_helper.rb
     - spec/spec_helper.rb
     - spec/rails_helper.rb
     - app/mailers/application_mailer.rb
     - app/models/application_record.rb
     - app/jobs/application_job.rb
-    - app/controllers/application_controller.rb
+    #- app/controllers/application_controller.rb
     - app/channels/application_cable/connection.rb
     - app/channels/application_cable/channel.rb
     - Gemfile
