--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.mysql
+  database: splay_test
 
 # Use by docker
 production:
