Making Travis work

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - 2.5.3
+before_script:
+  - bundle exec rails db:migrate RAILS_ENV=test
 script:
   - bundle exec rspec
   - bundle exec rubocop -P
