--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,9 @@ Style/FrozenStringLiteralComment:
 Style/Documentation:
   Enabled: false
 
+Style/SymbolArray:
+  Enabled: false
+
 Metrics/BlockLength:
   Exclude:
     - spec/api/**/*
